@@ -1,3 +1,4 @@
+11/22/10 fix Reset All for bar meters
 11/22/10 use Property<T> access to simplify DielectricChargesControl
 11/22/10 use BooleanPropertyCheckBox to simplify View control panel
 11/22/10 add BooleanPropertyCheckBox to simplify check boxes in control panels
